chore: #1882 Adding integration tests for GooglePubSubProducerManager + refactor others Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>